# PS1Games

./: CMakeLists.txt  MAKEFILE.mak  README.md  build.ps1  constants.h  cuesheet.xml  main.c  main.cpe  run_exe.bat
cdimage/: game.iso
data/MAIN_SCREEN/: BACK_1.TIM  BACK_2.TIM  LOGO_GAME_SEL.TIM  NEXT_TRACK.TIM  PREV_TRACK.TIM  SELECT_ARROW.TIM  SNAKE.TIM  TIC_TAC_TOE.TIM
data/TIC_TAC/: CIRCLE.TIM  CROSS.TIM  FIELD.TIM  LINE.TIM  SELECTED.TIM
data/TIC_TAC/SCREEN/: TIC_TAC_1_P.TIM  TIC_TAC_1_PS.TIM  TIC_TAC_2_P.TIM  TIC_TAC_2_PS.TIM  TIC_TAC_BACK_1.TIM  TIC_TAC_BACK_2.TIM  TIC_TAC_LOGO.TIM
res/: 22.PSX  SPLASH.TIM
res/ps1 project/Game Selector/: game selector.psd
res/ps1 project/Snake/: snake.psd  snake_param.txt
res/ps1 project/Tic tac/: tic tac.psd
res/ps1 project/Tracks/: ._2000AD - Tearaway Thomas +3 trn.mod  ._BLiZZARD - Sonic N intro.xm  ._GiNitogen - Hootech WAV MP3 Converter crk.xm  ._Grand Lord - Narcis Dictionary 5b202crk.xm  ._barbiecd.xm  ._bright_e.xm  ._dancing_midgits.xm  ._db_key6.xm  ._emax-doz.mod  ._fff_-_nero_7_xxkg.xm  ._goodys_return.mod  ._html2.it  ._kortis.mod  ._krv-curs.xm  ._kz_-_moo0_imageviewer_sp_1_66_crk.it  ._toilet4.xm  ._vm_i_vffeltning.xm  ._xm.xm  barbiecd.xm  xm.xm
src/: controller.c  controller.h  core.c  core.h  engine.c  engine.h  main.c  screen_selector.c  screen_selector.h
src/games/: tic_tac_screen.c  tic_tac_screen.h  tic_tac_toe_game.c  tic_tac_toe_game.h
src/start_screen/: screen_selector.c  screen_selector.h
